--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,17 @@
   "references": [
     {
       "path": "./tsconfig.node.json"
+      
+      
     },
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+    
+  ],
+    "compilerOptions":{
+      "allowJs": true
+    }
+  
+
 }
