--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@mdi/font": "^7.4.47",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
@@ -20,6 +22,8 @@
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0",
+    "vue-smooth-dnd": "^0.8.1",
+    "vuedraggable": "^4.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
